update campaign, how associated
